content/browser/frame_host/render_widget_host_view_guest.h
@@ -106,6 +106,7 @@ class CONTENT_EXPORT RenderWidgetHostViewGuest
   void ProcessTouchEvent(const blink::WebTouchEvent& event,
                          const ui::LatencyInfo& latency) override;
 
+  void DidStopFlinging() override;
   bool LockMouse() override;
   void UnlockMouse() override;
   viz::LocalSurfaceId GetLocalSurfaceId() const override;
